# Vision-Module

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/data/: dataloader.yaml
configs/model/: effb2.yaml  effv2s.yaml  mnasa2.yaml  mobilev3s.yaml  shuffnetv2.yaml  squeezv1.yaml  squeezv11.yaml
configs/training/: default.yaml
notebooks/: dataset_file.ipynb  new_dataframe_split.ipynb  test_dataloader.ipynb  test_df_per_subject.ipynb  test_frame_extraction.ipynb  test_metrics_calculation.ipynb  test_train_loop.ipynb
src/: predictions.csv  test.py  train.py
src/data/: dataloader.py  dataset.py
src/engine/: train.py  validation.py
src/models/: custom_linear_model.py  model.py
src/utils/: early_stopping.py  utils.py
