[project]
name = "datapreprocessing"
version = "0.1.0"
description = "Tool to extract frames from videos with OpenCV"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch",
    "torchvision",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "tqdm>=4.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[tool.black]
line-length = 79
target-version = ['py312']
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.uv
  | notebooks
  | data
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*", "*/data/*"]
